--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -34,8 +34,8 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles<span id="Selected-documentation-and-usage-notes-for-my-dotfiles"></span></h1>
-<p><strong>Revision No. 839, commit <code>4d9ee3e</code>.</strong></p>
-<p><strong>“Termux: Changes for Android 11+, ssh-agent no longer daemonized”</strong></p>
+<p><strong>Revision No. 840, commit <code>e50b33c</code>.</strong></p>
+<p><strong>“Termux: Dropped termux-chroot for 5x improved performance”</strong></p>
 <div class="toc">
 <p>Table of Contents</p>
 <ul>
@@ -44,11 +44,7 @@
 <li><a href="#Quick-start">Quick start</a>
 <ul>
 <li><a href="#Installing-Debian-using-debootstrap">Installing Debian using <code>debootstrap</code></a></li>
-<li><a href="#Quick-start-on-Termux-for-Android">Quick start on Termux for Android</a>
-<ul>
-<li><a href="#Notes-on-Android-11-or-later">Notes on Android 11 or later</a></li>
-</ul>
-</li>
+<li><a href="#Quick-start-on-Termux-for-Android">Quick start on Termux for Android</a></li>
 <li><a href="#List-of-supported-platforms">List of supported platforms</a></li>
 </ul>
 </li>
@@ -88,6 +84,14 @@
 <li><a href="#Non-standard-commands">Non-standard commands</a>
 <ul>
 <li><a href="#Interactive-shell">Interactive shell</a></li>
+<li><a href="#Termux-for-Android">Termux for Android</a>
+<ul>
+<li><a href="#Standard-file-descriptors">Standard file descriptors</a></li>
+<li><a href="#Shell-escapes-in-sh">Shell escapes in <code>sh</code></a></li>
+<li><a href="#PREFIX"><code>$PREFIX</code></a></li>
+<li><a href="#Background-processes-on-Android-11-and-later">Background processes on Android 11 and later</a></li>
+</ul>
+</li>
 <li><a href="#cd"><code>cd</code></a></li>
 <li><a href="#chromium"><code>chromium</code></a>
 <ul>
@@ -113,19 +117,19 @@
 <p>View changelog since the last revision as <a href="https://github.com/microsounds/atelier/compare/HEAD~1...HEAD.diff"> <code>diff HEAD~1...HEAD</code></a></p>
 <p>The verbosity factor of this document compared to comment lines of code
 in this repo is about <strong>5:1</strong>.</p>
-<p>If this document is <em>26.8KiB</em> in
+<p>If this document is <em>27.9KiB</em> in
 size, and the approximate size of all comment lines of code is
 <em>61.0KiB</em> then this document
-currently covers about <b style="font-size: 130%;">8.79%</b>
+currently covers about <b style="font-size: 130%;">9.15%</b>
 of all implemented features and behavior in this repository.
 This is just an <a href="https://github.com/microsounds/microsounds.github.io/raw/master/.scripts/dotfiles-ls.sh">automated guess</a> though.</p>
 <p>This document and repository is also mirrored at
 <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on GitHub.</p>
-<p>Last updated 🌕 Sun, Aug 28th, 2022.</p>
+<p>Last updated 🌘 Tue, Sep 6th, 2022.</p>
 <!-- header and github badges -->
 <!-- github readmes only support align attributes for styling -->
 <div style="text-align: center;">
-<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime42.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
+<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime28.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
 <p><img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github" alt="ico-freq" />
 <img src="https://img.shields.io/github/repo-size/microsounds/atelier?logo=github" alt="ico-size" />
 <a href="https://github.com/microsounds/atelier/actions/workflows/ci.yml" title="unit tests"><img src="https://github.com/microsounds/atelier/actions/workflows/ci.yml/badge.svg" alt="ico-ci" /></a>
@@ -305,8 +309,7 @@ $ exec $SHELL -l
 <h2>Quick start on Termux for Android<span id="Quick-start-on-Termux-for-Android"></span></h2>
 <blockquote>
 <p><strong>NOTE</strong><br/>
-<em>Currently, only a basic shell environment in single-user mode is supported.<br/>
-This is meant to be a lightweight port with modifications, do not initiate a full <code>post-install</code>.</em></p>
+This is meant to be a lightweight port with modifications, do not initiate a full <code>post-install</code>._</p>
 </blockquote>
 <ol>
 <li>Install <code>git</code>, and bootstrap the system using <code>git reset --hard</code> as described above.</li>
@@ -321,9 +324,7 @@ This is meant to be a lightweight port with modifications, do not initiate a ful
 </ul>
 </li>
 </ol>
-<h3>Notes on Android 11 or later<span id="Notes-on-Android-11-or-later"></span></h3>
-<p>Many manufacturer distributions of Android since version 11 have become far more aggressive in pruning “phantom” processes (daemons) in the pursuit of battery life optimization.
-In order to prevent Android from prematurely pruning <code>ssh-agent</code> while multitasking, it is called as the parent process for the current shell.</p>
+<p>See <a href="https://github.com/microsounds/atelier/raw/master/#Termux_for_Android">attached notes</a> for explanations of changes from a standard Linux environment.</p>
 <h2>List of supported platforms<span id="List-of-supported-platforms"></span></h2>
 <p><strong>Full graphical shell environment</strong></p>
 <ul>
@@ -687,6 +688,20 @@ See <a href="https://github.com/microsounds/atelier/raw/master/.local/include/th
 <p><img src="https://raw.githubusercontent.com/microsounds/microsounds/master/dotfiles/path-gitstatus.png" alt="path-gitstatus" /></p>
 <p>The prompt path will feature embedded <code>git</code> information provided by <a href="https://github.com/microsounds/atelier/raw/master/Scripts/git_status.sh"><code>path-gitstatus</code></a> highlighting the root of a <code>git</code> worktree and it’s status.</p>
 <p>Outside of <code>git</code> worktrees, the path component will be mangled by <a href="https://github.com/microsounds/atelier/raw/master/.local/lib/path-shorthand"><code>path-shorthand</code></a> and be truncated to the last <code>$PATH_WIDTH</code> characters <em>(default is 50)</em> for improved usability.</p>
+<h2>Termux for Android<span id="Termux-for-Android"></span></h2>
+<p>Single-user shell environment should work as expected on Termux without root access or changes to <code>$PREFIX/etc</code> with several caveats described below:</p>
+<p>Post-install scripts make these adjustments statically for existing scripts.</p>
+<h3>Standard file descriptors<span id="Standard-file-descriptors"></span></h3>
+<p>Shell scripts on Android systems without root access have no access to standard file descriptors <code>/dev/std{in,out,err}</code>, use <code>/proc/self/fd/{0,1,2}</code> instead.</p>
+<h3>Shell escapes in <code>sh</code><span id="Shell-escapes-in-sh"></span></h3>
+<p><code></code> to insert shell escape literals works in some circumstances but not all, use <code></code> when in doubt.</p>
+<h3><code>$PREFIX</code><span id="PREFIX"></span></h3>
+<p>Previously, <code>termux-chroot</code> was used to ensure a FHS-compliant environment, but it introduces unacceptable performance drawbacks in my tests.</p>
+<p>Use Termux’s own environment <code>$PREFIX</code> to refer to standard filesystem locations within scripts, e.g. <code>$PREFIX/tmp</code> which expands to <code>/data/data/com.termux/files/usr/tmp</code></p>
+<h3>Background processes on Android 11 and later<span id="Background-processes-on-Android-11-and-later"></span></h3>
+<p>Many manufacturer distros of Android since version 11 have become far more aggressive in pruning “phantom” processes (daemons) in the pursuit of battery life optimization.
+In order to prevent Android from prematurely pruning <code>ssh-agent</code> while multitasking, it is called as the parent process for the current shell.</p>
+<p>Termux developers recommend their own non-standard startup method or running daemons in the foreground without forking and with wakelock acquired if you wish to run a long-running task.</p>
 <h2><code>cd</code><span id="cd"></span></h2>
 <ul>
 <li>
@@ -960,12 +975,12 @@ found in the current revision:</em></p>
 <li><code>xwin_widgets.sh v0.4</code></li>
 </ul>
 <p><em>Total on-disk size of the current revision is
-203.09KiB
+204.28KiB
 out of a total compressed git history size of
-747.47KiB.</em></p>
+743.79KiB.</em></p>
 </blockquote>
 <h1>Complete source listing<span id="Complete-source-listing"></span></h1>
-<pre><code><span class="term-prompt">root@91b01fa7cf6b</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
+<pre><code><span class="term-prompt">root@e8e0bc30707a</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
 -rw-r--r-- 1 8.4K   May 12 2022 02:36 rev. 130 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.bashrc">.bashrc</a>
 -rw-r--r-- 1 1.1K   Jun 29 2022 14:52 rev. 78  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts">.comforts</a>
 -rw-r--r-- 1  395   Mar 10 2022 17:55 rev. 8   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts-git">.comforts-git</a>
@@ -1073,7 +1088,7 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1  808   Feb 13 2022 22:53 rev. 3   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/29-chromium-extensions.sh">.once.d/29-chromium-extensions.sh</a>
 -rwxr-xr-x 1   58   Nov 30 2021 00:47 rev. 3   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/2a-remove-motd.sh">.once.d/2a-remove-motd.sh</a>
 -rwxr-xr-x 1  201   Mar  2 2022 12:39 rev. 2   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/2b-enscript-fonts.sh">.once.d/2b-enscript-fonts.sh</a>
--rwxr-xr-x 1 3.2K   Aug 28 2022 22:58 rev. 24  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/a0-android-termux.sh">.once.d/a0-android-termux.sh</a>
+-rwxr-xr-x 1 3.3K   Sep  6 2022 09:31 rev. 25  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/a0-android-termux.sh">.once.d/a0-android-termux.sh</a>
 -rwxr-xr-x 1  200   Jun 18 2021 00:52 rev. 9   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/c0-chromebook-delete-key.sh">.once.d/c0-chromebook-delete-key.sh</a>
 -rwxr-xr-x 1  818   Feb 25 2022 18:12 rev. 11  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/c1-chromebook-i915.sh">.once.d/c1-chromebook-i915.sh</a>
 -rwxr-xr-x 1  195   Dec 16 2021 07:15 rev. 1   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/p0-pocketchip-delete-key.sh">.once.d/p0-pocketchip-delete-key.sh</a>
@@ -1089,10 +1104,10 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1 1.4K   Dec  3 2021 23:13 rev. 19  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_webm.sh">Scripts/xwin_webm.sh</a>
 -rwxr-xr-x 1 3.0K   Dec 13 2021 02:28 rev. 17  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_widgets.sh">Scripts/xwin_widgets.sh</a>
 -rw-r--r-- 1 2.0K   Mar 12 2022 17:16 rev. 5   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Userscripts/youtube_screenshot.user.js">Userscripts/youtube_screenshot.user.js</a>
--rw-r--r-- 1  27K   Aug 28 2022 22:58 rev. 181 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
+-rw-r--r-- 1  28K   Sep  6 2022 09:31 rev. 182 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
 </code></pre>
 <!-- created Mon, 19 Aug 2019 22:48:18 -0700 -->
-<!-- updated Sun, 28 Aug 2022 22:58:16 -0500 -->
+<!-- updated Tue, 6 Sep 2022 09:31:17 -0700 -->
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
