--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -34,8 +34,8 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles<span id="Selected-documentation-and-usage-notes-for-my-dotfiles"></span></h1>
-<p><strong>Revision No. 840, commit <code>e50b33c</code>.</strong></p>
-<p><strong>“Termux: Dropped termux-chroot for 5x improved performance”</strong></p>
+<p><strong>Revision No. 841, commit <code>5a266f7</code>.</strong></p>
+<p><strong>“Termux: Removed $OLDPWD persistence between shells”</strong></p>
 <div class="toc">
 <p>Table of Contents</p>
 <ul>
@@ -87,7 +87,7 @@
 <li><a href="#Termux-for-Android">Termux for Android</a>
 <ul>
 <li><a href="#Standard-file-descriptors">Standard file descriptors</a></li>
-<li><a href="#Shell-escapes-in-sh">Shell escapes in <code>sh</code></a></li>
+<li><a href="#ESC-sequences"><code>ESC</code> sequences</a></li>
 <li><a href="#PREFIX"><code>$PREFIX</code></a></li>
 <li><a href="#Background-processes-on-Android-11-and-later">Background processes on Android 11 and later</a></li>
 </ul>
@@ -129,7 +129,7 @@ This is just an <a href="https://github.com/microsounds/microsounds.github.io/ra
 <!-- header and github badges -->
 <!-- github readmes only support align attributes for styling -->
 <div style="text-align: center;">
-<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime28.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
+<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime35b.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
 <p><img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github" alt="ico-freq" />
 <img src="https://img.shields.io/github/repo-size/microsounds/atelier?logo=github" alt="ico-size" />
 <a href="https://github.com/microsounds/atelier/actions/workflows/ci.yml" title="unit tests"><img src="https://github.com/microsounds/atelier/actions/workflows/ci.yml/badge.svg" alt="ico-ci" /></a>
@@ -324,7 +324,7 @@ This is meant to be a lightweight port with modifications, do not initiate a ful
 </ul>
 </li>
 </ol>
-<p>See <a href="https://github.com/microsounds/atelier/raw/master/#Termux_for_Android">attached notes</a> for explanations of changes from a standard Linux environment.</p>
+<p>See <a href="https://github.com/microsounds/atelier/raw/master/#termux-for-android">attached notes</a> for explanations of changes from a standard Linux environment.</p>
 <h2>List of supported platforms<span id="List-of-supported-platforms"></span></h2>
 <p><strong>Full graphical shell environment</strong></p>
 <ul>
@@ -693,8 +693,8 @@ See <a href="https://github.com/microsounds/atelier/raw/master/.local/include/th
 <p>Post-install scripts make these adjustments statically for existing scripts.</p>
 <h3>Standard file descriptors<span id="Standard-file-descriptors"></span></h3>
 <p>Shell scripts on Android systems without root access have no access to standard file descriptors <code>/dev/std{in,out,err}</code>, use <code>/proc/self/fd/{0,1,2}</code> instead.</p>
-<h3>Shell escapes in <code>sh</code><span id="Shell-escapes-in-sh"></span></h3>
-<p><code></code> to insert shell escape literals works in some circumstances but not all, use <code></code> when in doubt.</p>
+<h3><code>ESC</code> sequences<span id="ESC-sequences"></span></h3>
+<p><code>&lt;backslash&gt;e</code> to insert escape literals in scripts works for some OSC codes, but not all, use octal <code>&lt;backslash&gt;33</code> when in doubt.</p>
 <h3><code>$PREFIX</code><span id="PREFIX"></span></h3>
 <p>Previously, <code>termux-chroot</code> was used to ensure a FHS-compliant environment, but it introduces unacceptable performance drawbacks in my tests.</p>
 <p>Use Termux’s own environment <code>$PREFIX</code> to refer to standard filesystem locations within scripts, e.g. <code>$PREFIX/tmp</code> which expands to <code>/data/data/com.termux/files/usr/tmp</code></p>
@@ -975,12 +975,12 @@ found in the current revision:</em></p>
 <li><code>xwin_widgets.sh v0.4</code></li>
 </ul>
 <p><em>Total on-disk size of the current revision is
-204.28KiB
+204.37KiB
 out of a total compressed git history size of
-743.79KiB.</em></p>
+744.63KiB.</em></p>
 </blockquote>
 <h1>Complete source listing<span id="Complete-source-listing"></span></h1>
-<pre><code><span class="term-prompt">root@e8e0bc30707a</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
+<pre><code><span class="term-prompt">root@49115936f409</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
 -rw-r--r-- 1 8.4K   May 12 2022 02:36 rev. 130 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.bashrc">.bashrc</a>
 -rw-r--r-- 1 1.1K   Jun 29 2022 14:52 rev. 78  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts">.comforts</a>
 -rw-r--r-- 1  395   Mar 10 2022 17:55 rev. 8   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts-git">.comforts-git</a>
@@ -1088,7 +1088,7 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1  808   Feb 13 2022 22:53 rev. 3   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/29-chromium-extensions.sh">.once.d/29-chromium-extensions.sh</a>
 -rwxr-xr-x 1   58   Nov 30 2021 00:47 rev. 3   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/2a-remove-motd.sh">.once.d/2a-remove-motd.sh</a>
 -rwxr-xr-x 1  201   Mar  2 2022 12:39 rev. 2   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/2b-enscript-fonts.sh">.once.d/2b-enscript-fonts.sh</a>
--rwxr-xr-x 1 3.3K   Sep  6 2022 09:31 rev. 25  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/a0-android-termux.sh">.once.d/a0-android-termux.sh</a>
+-rwxr-xr-x 1 3.4K   Sep  6 2022 12:08 rev. 26  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/a0-android-termux.sh">.once.d/a0-android-termux.sh</a>
 -rwxr-xr-x 1  200   Jun 18 2021 00:52 rev. 9   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/c0-chromebook-delete-key.sh">.once.d/c0-chromebook-delete-key.sh</a>
 -rwxr-xr-x 1  818   Feb 25 2022 18:12 rev. 11  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/c1-chromebook-i915.sh">.once.d/c1-chromebook-i915.sh</a>
 -rwxr-xr-x 1  195   Dec 16 2021 07:15 rev. 1   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/p0-pocketchip-delete-key.sh">.once.d/p0-pocketchip-delete-key.sh</a>
@@ -1104,10 +1104,10 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1 1.4K   Dec  3 2021 23:13 rev. 19  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_webm.sh">Scripts/xwin_webm.sh</a>
 -rwxr-xr-x 1 3.0K   Dec 13 2021 02:28 rev. 17  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_widgets.sh">Scripts/xwin_widgets.sh</a>
 -rw-r--r-- 1 2.0K   Mar 12 2022 17:16 rev. 5   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Userscripts/youtube_screenshot.user.js">Userscripts/youtube_screenshot.user.js</a>
--rw-r--r-- 1  28K   Sep  6 2022 09:31 rev. 182 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
+-rw-r--r-- 1  28K   Sep  6 2022 12:08 rev. 183 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
 </code></pre>
 <!-- created Mon, 19 Aug 2019 22:48:18 -0700 -->
-<!-- updated Tue, 6 Sep 2022 09:31:17 -0700 -->
+<!-- updated Tue, 6 Sep 2022 12:08:38 -0700 -->
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
