--- a/index.htm
+++ b/index.htm
@@ -41,21 +41,31 @@
 <span class="aside"><sup><em>Original illustration <a href="https://gelbooru.com/index.php?page=post&amp;s=view&amp;id=3757995">© 2015 tanakatam</a></em></sup></span></p>
 <h2>About me<span id="About-me"></span></h2>
 <p>This is my little sanctuary where I bottle up the unix computer zealot in me, you can call me <code>microsounds</code> if you want.</p>
-<p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="https://files.catbox.moe/gn20dj.pdf" title="Bell System Technical Journal Vol. 57, No. 6, Part 2, pp. 1905- (July-Aug. 1978), Dennis Ritchie, Ken Thompson">unix</a> <a href="http://files.catwell.info/misc/mirror/the-unix-programming-environment-kernighan-pike.pdf" title="The Unix Programming Environment (1984), Brian Kernighan, Rob Pike">programming</a> <a href="http://www.catb.org/~esr/writings/taoup/html/" title="The Art of Unix Programming (2003), Eric S. Raymond">environment</a>.
-I like to have <a href="https://effexxx.bandcamp.com/album/from-4jyo-han-to-everywhere-again" title="from 4jyo​-​han to everywhere (2011), effe">this album</a> in the background sometimes.</p>
+<p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="https://files.catbox.moe/gn20dj.pdf" title="Bell System Technical Journal Vol. 57, No. 6, Part 2, pp. 1905- (July-Aug. 1978), Dennis Ritchie, Ken Thompson">unix</a> <a href="http://files.catwell.info/misc/mirror/the-unix-programming-environment-kernighan-pike.pdf" title="The Unix Programming Environment (1984), Brian Kernighan, Rob Pike">programming</a> <a href="http://www.catb.org/~esr/writings/taoup/html/" title="The Art of Unix Programming (2003), Eric S. Raymond">environment</a>.</p>
+<div class="aside right">
+<p><em>“I bet you have soft hands and have trouble in loud environments”</em><br/>
+— <a href="https://desuarchive.org/g/thread/85512771/#85561792">/g/ post No.85561792</a></p>
+</div>
+<p>The echoes of the old world I once loved and lost have grown dissonant and almost unrecognizable,
+and even though the world I used to know has all but bitrotted away,
+I can still make out the last remnants of those dreamlike days,
+the <em>sentimental microsounds</em> and the <a href="https://effexxx.bandcamp.com/album/from-4jyo-han-to-everywhere-again" title="from 4jyo​-​han to everywhere (2011), effe">sweet nothings</a> spared the ravages of time.</p>
 <p>More importantly, I enjoy designing/writing my own tools and extending existing tools to automate things I would otherwise be doing by hand.
 Sometimes, I’ll do this to force myself to try new things.</p>
 <div class="right" style="filter: grayscale(65%); font-style: italic;">
-<p>For example, this website,
-the superset of github flavored markdown I built up to author this site,
-and the static site generator I wrote that ties it all together were a result of me wanting to get into long form writing.</p>
-<p>That’s the excuse I give myself, anyway.
-I don’t actually care for long form writing,
-I just really like metaprogramming.</p>
+<p>I wanted to encourage others to share their knowledge, their lived experiences, dreams and desires through the low tech and pseudononymous nature of the free and open web.
+So I wrote a static site generator and rolled my own superset of markdown to author this site as my personal sandbox.</p>
+<p>I would be lying if I said I was interested in long form writing, I want to share what I like through the lens of metaprogramming and have fun doing it.</p>
 <p>It’s a never-ending process.</p>
-<p><a href="notes/dotfiles.htm" title="It's pretty fun though."><img src="/static/shimemiku/shime32.png" alt="ico-scripts" /></a></p>
+<p><a href="notes/dotfiles.htm" title="It's pretty fun though."><img src="/static/shimemiku/shime33.png" alt="ico-scripts" /></a></p>
+<!-- firefox renders this hr element above this entire floated div if not placed here -->
+<hr style="width: 70%;
+    border-style: line none none;
+    border-width: 5px;
+    color: #FFF;
+	transform: rotate(120deg);
+	opacity: 40%;"/>
 </div>
-<hr style="width: 40%;"/>
 <h2>Things I’ve made recently<span id="Things-Ive-made-recently"></span></h2>
 <p>I have a collection of notes and writings located at <a href="notes/index.htm"><code>/notes</code></a> if you’re interested.</p>
 <ul>
@@ -85,10 +95,10 @@ I just really like metaprogramming.</p>
 <h2>Contact me<span id="Contact-me"></span></h2>
 <p>If it’s about a project or a page on this website, open an issue or a pull request on GitHub at one of the links above.</p>
 <p><span class="blink" style="color: #FFFF00;"><em>New!</em></span> —
-If you prefer e-mail or discord, my contact info is below.
-I’ll congratulate you if your e-mail scraper can read POSIX shell command language.</p>
-<pre><code><span class="term-prompt">microsounds@effe</span>:<span class="term-dir">~</span>$ cat contact_info.txt | gzip | base64 -w 0 \
-&gt;	| sed -E -e 's/(.)(.)/\2\1/g' -e 's/.&#123;4&#125;/&amp; /g' | fold -s
+If you want to contact me directly over e-mail or discord, my contact info is below.
+It’s not really a puzzle, just remove spaces and newlines and swap the place of every pair of characters and decode as <code>base64</code>, then <code>gzip</code>.</p>
+<pre><code><span class="term-prompt">microsounds@shami</span>:<span class="term-dir">~</span>$ cat contact.txt | gzip -c | base64 -w 0 \
+&gt;	| sed -E -e 's/(.)(.)/\2\1/g' -e 's/.&#123;4&#125;/&amp; /g' | fold -s | tee <a href="/info.txt">info.txt</a>
 4HIs AAAA AACA 9AVP QhLA yGRC FXiq 5maF Alkp qcmX mJmb CWkm uFnQ xJbp qODS HuJr
 b+cl ZKFn fyFl VKKY SxFU Yq5m pymZ pBcZ JAR/ fkH1 AAAA
 </code></pre>
@@ -141,7 +151,7 @@ b+cl ZKFn fyFl VKKY SxFU Yq5m pymZ pBcZ JAR/ fkH1 AAAA
 		</a>
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
-	— &#169; 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
+	— &#169; <del>2009</del> 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
 	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.5 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
